--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Mates",
+  "name": "mates",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,9 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-picker/picker": "^2.11.1",
+    "@react-native/new-app-screen": "0.80.2",
+    "firebase": "^10.8.0",
     "react": "19.1.0",
     "react-native": "0.80.2",
-    "@react-native/new-app-screen": "0.80.2"
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -27,6 +31,7 @@
     "@react-native/typescript-config": "0.80.2",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
