--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-picker/picker": "^2.11.1",
     "@react-native/new-app-screen": "0.80.2",
-    "firebase": "^10.8.0",
+    "firebase": "^12.2.1",
     "react": "19.1.0",
     "react-native": "0.80.2",
     "react-native-vector-icons": "^10.0.3"
@@ -28,16 +28,17 @@
     "@react-native/babel-preset": "0.80.2",
     "@react-native/eslint-config": "0.80.2",
     "@react-native/metro-config": "0.80.2",
-    "@react-native/typescript-config": "0.80.2",
+    "@react-native/typescript-config": "^0.80.2",
     "@types/jest": "^29.5.13",
-    "@types/react": "^19.1.0",
+    "@types/react": "^19.1.12",
+    "@types/react-native": "^0.72.8",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "19.1.0",
-    "typescript": "5.0.4"
+    "typescript": "^5.0.4"
   },
   "engines": {
     "node": ">=18"
