--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,10 @@
 {
-  "extends": "@react-native/typescript-config"
+  "extends": "@react-native/typescript-config",
+  "include": [
+    "types/**/*.d.ts",
+    "App.tsx",
+    "firebase.ts",
+    "**/*.ts",
+    "**/*.tsx"
+  ]
 }
